--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "cors": "^2.6.0",
     "express": "^4.12.3",
-    "morgan": "^1.5.2"
+    "morgan": "^1.5.2",
+    "multer": "^0.1.8"
   }
 }
